[package]
name = "nn-h"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
mnist = {version = "*", features = ["download"]}
serde = "*"
# use eframe from subdir crates/eframe from emilk/egui on github:
eframe = {git = "https://github.com/emilk/egui/", branch = "master" }

